<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ClaimShopActivity"
    tools:showIn="@layout/activity_claim_shop"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/textClaimHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        android:text="@string/claim"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textVerifDocsPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verificationDocsPrompt"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/textClaimHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/btnCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/textVerifDocsPrompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/imageVerifDocs"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/textVerifDocsPrompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>